# nfl-scraper

./: .gitignore  README.md  pyproject.toml  test_api_espn.py  test_espn_direct.py  test_espn_years.py
.github/workflows/: publish.yml
src/: debug_espn.py  debug_historical.py  debug_parsing.py  find_table.py  temp.py  test_espn.py  test_year_discovery.py
src/nfl_webscraper/: __init__.py  api.py  discover.py  exceptions.py  http.py  pagination.py  parsing.py  schema.py
src/nfl_webscraper/sites/: __init__.py  base.py  espn_com.py  nfl_com.py
src/nflscraping/: __init__.py  api.py  core.py  exceptions.py  pagination.py  parsing.py
tests/: test_api.py  test_core.py
