[project]
name = "nfl-webscraper"
description = "Scrape NFL player and team statistics (multi-year, async, Polars)."
readme = "README.md"
license = { file = "LICENSE" }
version = "0.1.2"
authors = [ { name = "Joshua Gorton", email = "jgorton1337@gmail.com" } ]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "httpx[http2]>=0.28.1",
    "polars>=1.32.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
keywords = ["nfl","scraping","stats","football","polars","httpx"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/fantasy-nfl-analytics/nfl-webscraper/"
Repository = "https://github.com/fantasy-nfl-analytics/nfl-webscraper/"
Issues = "https://github.com/fantasy-nfl-analytics/nfl-webscraper/issues"

[tool.uv]
# UV settings (dependencies resolved via [project.dependencies])

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

## Removed setuptools config (uv_build handles packaging).
